[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alembic-seeder"
version = "1.0.0"
description = "A comprehensive seeder system for Alembic and SQLAlchemy, inspired by Laravel seeders"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["alembic", "sqlalchemy", "seeder", "database", "migration", "seed"]
authors = [
    { name = "Alembic Seeder Contributors", email = "contact@alembic-seeder.dev" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "sqlalchemy>=2.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
alembic = ["alembic>=1.12.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Documentation = "https://github.com/alembic-seeder/alembic-seeder#readme"
Issues = "https://github.com/alembic-seeder/alembic-seeder/issues"
Source = "https://github.com/alembic-seeder/alembic-seeder"

[project.scripts]
alembic-seeder = "alembic_seeder.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/alembic_seeder"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=alembic_seeder --cov-report=term-missing"

[tool.coverage.run]
source = ["src/alembic_seeder"]
omit = ["*/tests/*", "*/test_*.py"]